--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,345 @@
-/* место для вашего кода */
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.header {
+  display: flex;
+  width: 1052px;
+  height: 105px;
+  margin: 92px 0 96px;
+}
+
+.header__menu {
+  margin: 43px 64px 39px 0;
+}
+
+.header__links-list {
+  display: flex;
+  gap: 32px;
+}
+
+.header__links-list-item {
+  list-style: circle;
+  text-underline-offset: 4px;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.header__links-list-item_no-bullit {
+  list-style: none;
+}
+.header__links-list-item_no-bullit a {
+  text-decoration: none;
+}
+
+.header__logo-image {
+  width: 148px;
+  height: 105px;
+}
+
+.header__address {
+  display: flex;
+  flex-direction: column;
+  width: 240px;
+  margin: 5px 0 3px 212px;
+  font-size: 18px;
+  font-style: normal;
+  line-height: 24.3px;
+}
+
+.address {
+  text-underline-offset: 3px;
+}
+
+.cover {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  background-image: url(/images/cover.jpg);
+  background-size: cover;
+  z-index: -1;
+  width: 1100px;
+}
+
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.cover__title {
+  display: flex;
+  flex-direction: column;
+  z-index: 2;
+  gap: 20px;
+  padding: 165px 24px 0;
+}
+
+.title {
+  color: #fff;
+  display: block;
+  font-size: 100px;
+  font-style: normal;
+  font-weight: 700;
+  text-transform: uppercase;
+  line-height: 100%;
+  letter-spacing: 30px;
+}
+
+.no-letter-spacing {
+  letter-spacing: 0;
+}
+
+.letter-spacing-extended {
+  letter-spacing: 60px;
+}
+
+.aligned-text {
+  text-align: left;
+  line-height: 115%;
+}
+
+.aligned-text_center {
+  text-align: center;
+}
+
+.aligned-text_right {
+  text-align: right;
+}
+
+.cover__description {
+  z-index: 2;
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+  padding: 135px 24px 50px 108px;
+  opacity: 0.6;
+}
+
+.cover__description-text {
+  color: #fff;
+  text-align: center;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
+  text-transform: uppercase;
+  word-spacing: 17.5px;
+}
+
+.bet-button {
+  color: #fff;
+  background-color: transparent;
+  border: 1px solid white;
+  text-align: center;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-transform: uppercase;
+  width: 257px;
+  height: 52px;
+}
+
+.lots {
+  width: 1052px;
+  height: 729px;
+  margin: 180px auto 179px;
+}
+
+.lots__heading {
+  color: #000;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+  padding: 0 905px 27px 26px;
+}
+
+.lots__card-list {
+  display: flex;
+  gap: 25px;
+  list-style: none;
+}
+
+.card-link {
+  text-decoration: none;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: relative;
+  z-index: -2;
+  width: 334px;
+  height: 600px;
+}
+
+.overlay-card {
+  background-color: rgba(0, 0, 0, 0.6);
+  position: absolute;
+  inset: 0;
+  z-index: -1;
+}
+
+.card__title {
+  color: #fff;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%;
+  text-decoration-line: underline;
+  text-transform: uppercase;
+  margin: 50px 40px 0;
+}
+.card__text {
+  color: #fff;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%;
+  margin: 0px 40px 50px;
+}
+.card_type_film .card__text {
+  height: 156px;
+}
+
+.card_type_film {
+  background-image: url(/images/card-lot-01.jpg);
+  background-size: cover;
+  background-position: left;
+}
+
+.card_type_book {
+  background-image: url(/images/card-lot-02.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+.card_type_picture {
+  background-image: url(/images/card-lot-03.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+.lots__look-more-link {
+  color: #000;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin: 30px 0 2px 26px;
+  text-underline-offset: 3px;
+}
+
+.about {
+  display: grid;
+  grid-template-columns: 430px 597px;
+  gap: 25px;
+  width: 1052px;
+  height: 596px;
+  margin: 0 auto 180px;
+}
+
+.logo-conteiner {
+  background-color: #000;
+  border-radius: 50%;
+  width: 240px;
+  height: 240px;
+  padding: 63px 46px;
+  margin: 0 95px 356px;
+}
+
+.about__logo {
+  background-image: url(/images/logo-white.svg);
+  background-size: contain;
+  width: 148px;
+  height: 114px;
+}
+
+.about__column {
+  display: flex;
+  flex-direction: column;
+  gap: 100px;
+  align-self: end;
+}
+
+.about__title {
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 48px;
+  text-transform: uppercase;
+}
+
+.about__text {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  font-size: 20px;
+  line-height: 23px;
+  font-weight: 400;
+}
+
+.footer {
+  display: flex;
+  width: 1052px;
+  height: 97px;
+  margin: 0 auto 0;
+  justify-content: space-between;
+}
+
+.footer__address {
+  display: flex;
+  flex-direction: column;
+  width: 240px;
+  font-size: 18px;
+  font-style: normal;
+  line-height: 24.3px;
+}
+
+.footer__menu {
+  text-align: center;
+}
+
+.footer__links-list {
+  text-align: center;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.footer__links-list-item {
+  text-underline-offset: 4px;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  list-style: none;
+}
+
+.footer__menu-link_active {
+  text-decoration: none;
+}
+
+.footer__social-list {
+  list-style: none;
+  display: flex;
+  width: 240px;
+  height: 48px;
+  justify-content: space-between;
+}
+
+.footer__social-icon {
+  width: 48px;
+  height: 48px;
+}
+
