--- a/styles/style.css
+++ b/styles/style.css
@@ -59,7 +59,7 @@ body {
   display: flex;
   flex-direction: column;
   position: relative;
-  background-image: url(/images/cover.jpg);
+  background-image: url(../images/cover.jpg);
   background-size: cover;
   z-index: -1;
   width: 1100px;
@@ -212,19 +212,19 @@ body {
 }
 
 .card_type_film {
-  background-image: url(/images/card-lot-01.jpg);
+  background-image: url(../images/card-lot-01.jpg);
   background-size: cover;
   background-position: left;
 }
 
 .card_type_book {
-  background-image: url(/images/card-lot-02.jpg);
+  background-image: url(../images/card-lot-02.jpg);
   background-size: cover;
   background-position: center;
 }
 
 .card_type_picture {
-  background-image: url(/images/card-lot-03.jpg);
+  background-image: url(../images/card-lot-03.jpg);
   background-size: cover;
   background-position: center;
 }
@@ -258,7 +258,7 @@ body {
 }
 
 .about__logo {
-  background-image: url(/images/logo-white.svg);
+  background-image: url(../images/logo-white.svg);
   background-size: contain;
   width: 148px;
   height: 114px;
