--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,7 @@ body {
 
 .header {
   display: flex;
+  align-items: center;
   width: 1052px;
   height: 105px;
   margin: 92px 0 96px;
@@ -36,22 +37,26 @@ body {
   text-decoration: none;
 }
 
+.header__logo {
+  margin-right: 212px;
+}
+
 .header__logo-image {
   width: 148px;
   height: 105px;
 }
 
 .header__address {
-  display: flex;
-  flex-direction: column;
-  width: 240px;
-  margin: 5px 0 3px 212px;
-  font-size: 18px;
-  font-style: normal;
-  line-height: 24.3px;
+  margin: 5px 0 3px;
 }
 
 .address {
+  display: flex;
+  flex-direction: column;
+  width: 240px;
+  font-size: 18px;
+  font-style: normal;
+  line-height: 24.3px;
   text-underline-offset: 3px;
 }
 
@@ -61,12 +66,13 @@ body {
   position: relative;
   background-image: url(../images/cover.jpg);
   background-size: cover;
-  z-index: -1;
+  z-index: -2;
   width: 1100px;
 }
 
 .overlay {
   position: absolute;
+  z-index: -1;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.6);
@@ -182,13 +188,6 @@ body {
   height: 600px;
 }
 
-.overlay-card {
-  background-color: rgba(0, 0, 0, 0.6);
-  position: absolute;
-  inset: 0;
-  z-index: -1;
-}
-
 .card__title {
   color: #fff;
   font-size: 22px;
@@ -199,6 +198,7 @@ body {
   text-transform: uppercase;
   margin: 50px 40px 0;
 }
+
 .card__text {
   color: #fff;
   font-size: 20px;
@@ -230,6 +230,7 @@ body {
 }
 
 .lots__look-more-link {
+  display: block;
   color: #000;
   font-size: 20px;
   font-style: normal;
@@ -296,15 +297,6 @@ body {
   justify-content: space-between;
 }
 
-.footer__address {
-  display: flex;
-  flex-direction: column;
-  width: 240px;
-  font-size: 18px;
-  font-style: normal;
-  line-height: 24.3px;
-}
-
 .footer__menu {
   text-align: center;
 }
@@ -342,4 +334,3 @@ body {
   width: 48px;
   height: 48px;
 }
-
