--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,10 @@
 body {
+  padding-bottom: 90px;
+}
+
+.container {
+  max-width: 1116px;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -9,7 +15,7 @@ body {
   align-items: center;
   width: 1052px;
   height: 105px;
-  margin: 92px 0 96px;
+  margin: 92px auto 96px;
 }
 
 .header__menu {
@@ -64,8 +70,8 @@ body {
   display: flex;
   flex-direction: column;
   position: relative;
-  background-image: url(../images/cover.jpg);
-  background-size: cover;
+  background: url(../images/cover.jpg) center/cover no-repeat;;
+  
   z-index: -2;
   width: 1100px;
 }
