--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 .container {
-  max-width: 1116px;
+  min-width: 1117px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -11,15 +11,14 @@ body {
 }
 
 .header {
-  display: flex;
-  align-items: center;
-  width: 1052px;
-  height: 105px;
+  display: grid;
+  grid-template-columns: 1fr 148px 1fr;
+  min-width: 1052px;
   margin: 92px auto 96px;
 }
 
 .header__menu {
-  margin: 43px 64px 39px 0;
+  place-self: center start;
 }
 
 .header__links-list {
@@ -44,16 +43,16 @@ body {
 }
 
 .header__logo {
-  margin-right: 212px;
+  height: 105px;
+  place-self: center center;
 }
 
 .header__logo-image {
-  width: 148px;
-  height: 105px;
+  height: 100%;
 }
 
 .header__address {
-  margin: 5px 0 3px;
+  place-self: center end;
 }
 
 .address {
@@ -70,15 +69,13 @@ body {
   display: flex;
   flex-direction: column;
   position: relative;
-  background: url(../images/cover.jpg) center/cover no-repeat;;
-  
-  z-index: -2;
+  background: url(../images/cover.jpg) center/cover no-repeat;
   width: 1100px;
 }
 
 .overlay {
   position: absolute;
-  z-index: -1;
+  z-index: 1;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.6);
@@ -130,7 +127,6 @@ body {
   align-items: baseline;
   justify-content: space-between;
   padding: 135px 24px 50px 108px;
-  opacity: 0.6;
 }
 
 .cover__description-text {
@@ -154,14 +150,16 @@ body {
   font-weight: 400;
   line-height: normal;
   text-transform: uppercase;
-  width: 257px;
-  height: 52px;
+  padding: 12px 32px;
 }
 
 .lots {
   width: 1052px;
-  height: 729px;
   margin: 180px auto 179px;
+  display: grid;
+  grid-template-rows: 74px 1fr 55px;
+  grid-template-columns: 26px 192px 1fr;
+
 }
 
 .lots__heading {
@@ -171,13 +169,17 @@ body {
   font-weight: 700;
   line-height: normal;
   text-transform: uppercase;
-  padding: 0 905px 27px 26px;
+  grid-column: 2/3;
+  grid-row: 1/2;
 }
 
 .lots__card-list {
+  grid-column: 1/-1;
+  grid-row: 2/3;
   display: flex;
   gap: 25px;
   list-style: none;
+  flex-wrap: wrap;
 }
 
 .card-link {
@@ -189,12 +191,15 @@ body {
   flex-direction: column;
   justify-content: space-between;
   position: relative;
-  z-index: -2;
-  width: 334px;
-  height: 600px;
+  z-index: 2;
+  background-size: cover;
+  max-width: 334px;
+  min-height: 600px;
+  flex-grow: 1;
 }
 
 .card__title {
+  z-index: 2;
   color: #fff;
   font-size: 22px;
   font-style: normal;
@@ -202,37 +207,26 @@ body {
   line-height: 120%;
   text-decoration-line: underline;
   text-transform: uppercase;
-  margin: 50px 40px 0;
+  padding: 50px 40px 0;
 }
 
 .card__text {
+  z-index: 2;
   color: #fff;
   font-size: 20px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 120%;
-  margin: 0px 40px 50px;
-}
-.card_type_film .card__text {
-  height: 156px;
+  padding: 0px 40px 50px;
 }
 
 .card_type_film {
   background-image: url(../images/card-lot-01.jpg);
-  background-size: cover;
-  background-position: left;
 }
 
 .card_type_book {
   background-image: url(../images/card-lot-02.jpg);
-  background-size: cover;
-  background-position: center;
 }
 
 .card_type_picture {
   background-image: url(../images/card-lot-03.jpg);
-  background-size: cover;
-  background-position: center;
 }
 
 .lots__look-more-link {
@@ -242,26 +236,29 @@ body {
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  margin: 30px 0 2px 26px;
   text-underline-offset: 3px;
+  grid-column: 2/3;
+  grid-row: 3/4;
+  align-self: end;
 }
 
 .about {
   display: grid;
-  grid-template-columns: 430px 597px;
-  gap: 25px;
+  grid-template-columns: 430px 1fr;
+  grid-template-rows: 101px 1fr;
+  column-gap: 25px;
   width: 1052px;
-  height: 596px;
   margin: 0 auto 180px;
 }
 
 .logo-conteiner {
   background-color: #000;
   border-radius: 50%;
+  grid-row: 1/3;
   width: 240px;
   height: 240px;
   padding: 63px 46px;
-  margin: 0 95px 356px;
+  margin: 0 95px;
 }
 
 .about__logo {
@@ -276,6 +273,7 @@ body {
   flex-direction: column;
   gap: 100px;
   align-self: end;
+  grid-row: 2/3;
 }
 
 .about__title {
@@ -298,8 +296,7 @@ body {
 .footer {
   display: flex;
   width: 1052px;
-  height: 97px;
-  margin: 0 auto 0;
+  margin: 0 auto;
   justify-content: space-between;
 }
 
@@ -329,11 +326,9 @@ body {
 }
 
 .footer__social-list {
-  list-style: none;
   display: flex;
-  width: 240px;
-  height: 48px;
-  justify-content: space-between;
+  gap: 48px;
+  list-style: none;
 }
 
 .footer__social-icon {
