--- a/styles/style.css
+++ b/styles/style.css
@@ -3,11 +3,11 @@ body {
 }
 
 .container {
-  min-width: 1117px;
+  max-width: 1117px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: center;
 }
 
 .header {
@@ -71,6 +71,7 @@ body {
   position: relative;
   background: url(../images/cover.jpg) center/cover no-repeat;
   width: 1100px;
+  margin: 0 auto;
 }
 
 .overlay {
@@ -157,9 +158,7 @@ body {
   width: 1052px;
   margin: 180px auto 179px;
   display: grid;
-  grid-template-rows: 74px 1fr 55px;
-  grid-template-columns: 26px 192px 1fr;
-
+  grid-template-rows: auto 1fr auto;
 }
 
 .lots__heading {
@@ -169,17 +168,21 @@ body {
   font-weight: 700;
   line-height: normal;
   text-transform: uppercase;
-  grid-column: 2/3;
   grid-row: 1/2;
+  padding: 0 0 27px 26px;
 }
 
 .lots__card-list {
-  grid-column: 1/-1;
   grid-row: 2/3;
   display: flex;
   gap: 25px;
   list-style: none;
   flex-wrap: wrap;
+}
+
+.wraper {
+  flex-grow: 1;
+  flex-basis: 334px;
 }
 
 .card-link {
@@ -192,10 +195,8 @@ body {
   justify-content: space-between;
   position: relative;
   z-index: 2;
-  background-size: cover;
-  max-width: 334px;
   min-height: 600px;
-  flex-grow: 1;
+  background-size: cover;
 }
 
 .card__title {
@@ -237,16 +238,16 @@ body {
   font-weight: 400;
   line-height: normal;
   text-underline-offset: 3px;
-  grid-column: 2/3;
   grid-row: 3/4;
   align-self: end;
+  padding: 30px 0 0 26px;
+  
 }
 
 .about {
   display: grid;
   grid-template-columns: 430px 1fr;
-  grid-template-rows: 101px 1fr;
-  column-gap: 25px;
+  gap: 25px;
   width: 1052px;
   margin: 0 auto 180px;
 }
@@ -254,7 +255,6 @@ body {
 .logo-conteiner {
   background-color: #000;
   border-radius: 50%;
-  grid-row: 1/3;
   width: 240px;
   height: 240px;
   padding: 63px 46px;
@@ -273,7 +273,7 @@ body {
   flex-direction: column;
   gap: 100px;
   align-self: end;
-  grid-row: 2/3;
+  padding-top: 101px;
 }
 
 .about__title {
