--- a/styles/style.css
+++ b/styles/style.css
@@ -3,11 +3,11 @@ body {
 }
 
 .container {
-  max-width: 1117px;
+  min-width: 1100px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  align-items: center;
 }
 
 .header {
