--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 .container {
-  min-width: 1100px;
+  max-width: 1100px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -70,8 +70,7 @@ body {
   flex-direction: column;
   position: relative;
   background: url(../images/cover.jpg) center/cover no-repeat;
-  width: 1100px;
-  margin: 0 auto;
+  min-width: 100%;
 }
 
 .overlay {
@@ -155,7 +154,7 @@ body {
 }
 
 .lots {
-  width: 1052px;
+  
   margin: 180px auto 179px;
   display: grid;
   grid-template-rows: auto 1fr auto;
